Add heavy client
Signed-off-by: Rémi VERCHERE <remi.verchere@axians.com>

--- a/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
+++ b/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
@@ -11,20 +11,6 @@ permalink: /fr/docs/eoa/2_0
 
 **⚠ Documentation en cours de rédaction ⚠**
 
-- [Prérequis](#Prérequis)
-- [Installation](#Installation)
-  * [EOA](#EOA)
-  * [Configuration SSH](#Configuration-SSH)
-  * [Configuration d’Eyes Of Network](#Configuration-d-EyesOfNetwork)
-  * [Selenium](#selenium)
-    + [PowerShell - DotNet](#powershell---dotnet)
-    + [C# Packages](#c--packages)
-    + [Browser Packages](#browser-packages)
-  * [Utilisation et Tests](#utilisation-et-tests)
-- [Création de scénarios](#création-de-scénarios)
-  * [Clients Lourds](#clients-lourds)
-  * [Sites Web](#sites-web)
-
 ## Prérequis
 
 EOA a besoin des paquets "Redistribuable Visual C++ pour Visual Studio 2015" pour fonctionner correctement.
@@ -241,7 +227,73 @@ L'exemple ci-après se fait depuis le site [EyesOfNetwork](https://www.eyesofnet
 
 #### Création du scénario
 
-#### Mise en forme dans EOA
+Pour créer le scénario, nous utilisons 2 fonctionnalités d'EOA:
+- Simulation de touches clavier ou boutons souris
+- Détection d'images pour valider les étapes
+
+#### Simulation touches boutons
+
+EOA propose des fonctions pour la simulation des touches ou boutons, que vous retrouverez décrites ici:
+
+* https://github.com/EyesOfNetworkCommunity/eyesofapplication/blob/master/Dependances/docs/functions.md#click-mousebutton-button
+* https://github.com/EyesOfNetworkCommunity/eyesofapplication/blob/master/Dependances/docs/functions.md#send-specialkeys-keystopress
+* https://github.com/EyesOfNetworkCommunity/eyesofapplication/blob/master/Dependances/docs/functions.md#send-keys-keystopress-timing
+
+Exemple pour simuler la touche TAB:
+
+```powershell
+Send-SpecialKeys "{ENTER}"
+```
+
+Exemplr pour simuler l'entrée d'un nom d'utilisateur:
+
+```powershell
+Send-Keys "login"
+```
+
+### Détection d'image
+
+Pour permettre la détection d'image, quelques pré-requis:
+- les captures doivent être faites directement sur le poste avec la résolution d'écran native
+- les images doivent être au format bitmap
+- les images doivente être enregistrées dans le dossier `C:\Axians\EOA\images\nom_du_script\MonImage.bmp`
+
+La procédure est ensuite la suivante:
+
+1. Faire la capture d'écran à détecter
+2. Sauver l'image au format BMP dans le dossier adéquat
+3. Appel des fonctions dans le scénario
+
+On pourra ensuite chercher et cliquer sur l'image comme suit:
+
+```powershell
+$xy=ImageSearch $Image_00_warning $ImageSearchRetries $ImageSearchVerbosity $EonServ 250 0 30 
+ImageClick $xy 0 0
+```
+
+Les options de la fonction `ImageSearch` sont décrites ici:
+* https://github.com/EyesOfNetworkCommunity/eyesofapplication/blob/master/Dependances/docs/functions.md#imagesearch
+
+#### Exemple
+
+Ci-après un exemple complet de recherche d'image, puis entrée login / mot de passe:
+
+```powershell
+$cmd = Measure-Command {
+  AddValues "INFO" "30 of tolerance because of transparency...."
+  # Please not the image name is composed by "$Image_"[File name without bmp extention]
+  $xy=ImageSearch $Image_01_connexion $ImageSearchRetries $ImageSearchVerbosity $EonServ 250 0 30 
+  ImageClick $xy 0 0
+  Send-Keys $User
+  Send-SpecialKeys "{TAB}"
+  Send-Keys $Pass
+  Send-SpecialKeys "{TAB}"
+  Send-SpecialKeys "{ENTER}"
+}
+$Chrono += [math]::Round($cmd.TotalSeconds,6)
+```
+
+L'image `$Image_01_connexion` correspondant au fichier `C:\Axians\EOA\images\nom_du_script\01_connexion.bmp`
 
 ### Sites Web
 
