Add webdriver actions
Signed-off-by: Rémi VERCHERE <remi.verchere@axians.com>

--- a/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
+++ b/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
@@ -376,4 +376,6 @@ Ci-après une liste non exhaustive :
 | `$WebDriver.FindElementByXPath("//div[@id='mydiv'").Click();` | Click sur un champ de type « XPath » |
 | `$WebDriver.SwitchTo().frame(0);` | Changer de frame |
 | `$WebDriver.switchTo().defaultContent();` | Revenir sur la frame initiale |
-| `WaitForElement "//li/div/div" $ImgTimeout -ByXPath –IsClickable` | Recherche d’élément de type XPath, et verification qu’il est bien clickable |
+| `$WebDriver.SwitchTo().window($WebDriver.WindowHandles[-1]);` | Changement de fenetre sur la dernière ouverte |
+| `WaitForElement "//li/div/div" $ImgTimeout -ByXPath –IsClickable` | Recherche d’élément de type XPath, et verification qu’il est bien cliquable |
+
