Correct EOA menu

--- a/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
+++ b/_posts/docs/eoa-2-0/2020-12-12-2-0-fr.md
@@ -251,7 +251,7 @@ Exemplr pour simuler l'entrée d'un nom d'utilisateur:
 Send-Keys "login"
 ```
 
-### Détection d'image
+#### Détection d'image
 
 Pour permettre la détection d'image, quelques pré-requis:
 - les captures doivent être faites directement sur le poste avec la résolution d'écran native
