--- a/_posts/docs/5-3/2020-05-18-5-3-fr.md
+++ b/_posts/docs/5-3/2020-05-18-5-3-fr.md
@@ -70,7 +70,7 @@ Le mode d'installation par image ISO
 
 ### 5.2 vers 5.3
 
-#### 5.2 installater avec ansible
+#### 5.2 installer avec ansible
 
 Mise à jour du repo EyesOfNetwork
 ``` bash
@@ -82,7 +82,7 @@ Mise à jour de EyesOfNetwork
 yum update
 ```
 
-#### 5.2 installater avec l'iso
+#### 5.2 installer avec l'iso
 
 ##### Ajouts et modifications des repo nécessaires
 
