--- a/_posts/news/en/2021-11-18-eon-6.md
+++ b/_posts/news/en/2021-11-18-eon-6.md
@@ -15,6 +15,7 @@ permalink: /en/news/:title
 ### Added
 * Add configuration file to upgrade cacti database
 * Add configuration file to upgrade cacti plugins
+* Add a new report module
 
 ### Changed
 * Upgrande Grafana from 6.5 to 8.2
