--- a/_posts/news/fr/2021-11-18-eon-6.md
+++ b/_posts/news/fr/2021-11-18-eon-6.md
@@ -15,6 +15,7 @@ permalink: /fr/news/:title
 ### Ajouts
 * Ajout du fichier de configuration pour mettre à jour la base de données cacti
 * Ajout du fichier de configuration pour mettre à jour les plugins cacti
+* Ajout d'un nouveau module de rapports
 
 ### Changements
 * Mise à jour Grafana de la 6.5 à la 8.2
